KSCM-2092 - Review Proposal: Fix Body Spacing
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69333 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -700,6 +700,7 @@ section.uif-disclosure .uif-headerText .uif-headerText-span [class*='icon-caret-
     box-shadow: none;
 }
 
-.table-condensed thead>tr>th, .table-condensed tbody>tr>th, .table-condensed tfoot>tr>th, .table-condensed thead>tr>td, .table-condensed tbody>tr>td, .table-condensed tfoot>tr>td {
+
+#review_proposal_details-grid .table-condensed thead>tr>th, .table-condensed tbody>tr>th, .table-condensed tfoot>tr>th, .table-condensed thead>tr>td, .table-condensed tbody>tr>td, .table-condensed tfoot>tr>td {
   padding: 1px;
 }
